--- a/src/renderer/i18n/locales/pt-PT/translation.json
+++ b/src/renderer/i18n/locales/pt-PT/translation.json
@@ -1,4 +1,5 @@
 {
+  "(Trial)": "(Avaliação)",
   "[Ctrl+Enter] Save, [Ctrl+Shift+Enter] Save and Resend": "[Ctrl+Enter] Guardar, [Ctrl+Shift+Enter] Guardar e Reenviar",
   "[Enter] send, [Shift+Enter] line break, [Ctrl+Enter] send without generating": "[Enter] enviar, [Shift+Enter] quebra de linha, [Ctrl+Enter] enviar sem gerar",
   "{{count}} conversations could not be recovered due to data read errors": "{{count}} conversas não puderam ser recuperadas devido a erros de leitura de dados",
