--- a/src/renderer/i18n/locales/it-IT/translation.json
+++ b/src/renderer/i18n/locales/it-IT/translation.json
@@ -1,4 +1,5 @@
 {
+  "(Trial)": "(Prova)",
   "[Ctrl+Enter] Save, [Ctrl+Shift+Enter] Save and Resend": "[Ctrl+Invio] Salva, [Ctrl+Maiusc+Invio] Salva e reinvia",
   "[Enter] send, [Shift+Enter] line break, [Ctrl+Enter] send without generating": "[Enter] invia, [Shift+Enter] a capo, [Ctrl+Enter] invia senza generare",
   "{{count}} conversations could not be recovered due to data read errors": "{{count}} conversazioni non sono state recuperate a causa di errori di lettura dei dati",
