--- a/src/renderer/i18n/locales/ko/translation.json
+++ b/src/renderer/i18n/locales/ko/translation.json
@@ -1,4 +1,5 @@
 {
+  "(Trial)": "(체험판)",
   "[Ctrl+Enter] Save, [Ctrl+Shift+Enter] Save and Resend": "[Ctrl+Enter] 저장, [Ctrl+Shift+Enter] 저장 및 재전송",
   "[Enter] send, [Shift+Enter] line break, [Ctrl+Enter] send without generating": "[Enter] 전송, [Shift+Enter] 줄 바꿈, [Ctrl+Enter] 생성하지 않고 전송",
   "{{count}} conversations could not be recovered due to data read errors": "{{count}}개의 대화를 데이터 읽기 오류로 인해 복구할 수 없습니다",
