--- a/src/renderer/i18n/locales/nb-NO/translation.json
+++ b/src/renderer/i18n/locales/nb-NO/translation.json
@@ -1,4 +1,5 @@
 {
+  "(Trial)": "(Prøveversjon)",
   "[Ctrl+Enter] Save, [Ctrl+Shift+Enter] Save and Resend": "[Ctrl+Enter] Lagre, [Ctrl+Shift+Enter] Lagre og send på nytt",
   "[Enter] send, [Shift+Enter] line break, [Ctrl+Enter] send without generating": "[Enter] send, [Shift+Enter] linjeskift, [Ctrl+Enter] send uten å generere",
   "{{count}} conversations could not be recovered due to data read errors": "{{count}} samtaler kunne ikke gjenopprettes på grunn av datalesingsfeil",
