--- a/src/renderer/i18n/locales/ru/translation.json
+++ b/src/renderer/i18n/locales/ru/translation.json
@@ -1,4 +1,5 @@
 {
+  "(Trial)": "(Пробная версия)",
   "[Ctrl+Enter] Save, [Ctrl+Shift+Enter] Save and Resend": "[Ctrl+Enter] Сохранить, [Ctrl+Shift+Enter] Сохранить и отправить заново",
   "[Enter] send, [Shift+Enter] line break, [Ctrl+Enter] send without generating": "[Enter] отправить, [Shift+Enter] перенос строки, [Ctrl+Enter] отправить без генерации",
   "{{count}} conversations could not be recovered due to data read errors": "{{count}} диалогов не удалось восстановить из-за ошибок чтения данных",
