--- a/src/renderer/i18n/locales/sv/translation.json
+++ b/src/renderer/i18n/locales/sv/translation.json
@@ -1,4 +1,5 @@
 {
+  "(Trial)": "(Prov)",
   "[Ctrl+Enter] Save, [Ctrl+Shift+Enter] Save and Resend": "[Ctrl+Enter] Spara, [Ctrl+Shift+Enter] Spara och skicka igen",
   "[Enter] send, [Shift+Enter] line break, [Ctrl+Enter] send without generating": "[Enter] skicka, [Shift+Enter] radbrytning, [Ctrl+Enter] skicka utan generering",
   "{{count}} conversations could not be recovered due to data read errors": "{{count}} konversationer kunde inte återställas på grund av dataläsningsfel",
