--- a/src/renderer/i18n/locales/zh-Hans/translation.json
+++ b/src/renderer/i18n/locales/zh-Hans/translation.json
@@ -1,4 +1,5 @@
 {
+  "(Trial)": "（试用）",
   "[Ctrl+Enter] Save, [Ctrl+Shift+Enter] Save and Resend": "[Ctrl+Enter] 保存, [Ctrl+Shift+Enter] 保存并发送",
   "[Enter] send, [Shift+Enter] line break, [Ctrl+Enter] send without generating": "[回车键] 发送，[Shift+回车键] 换行, [Ctrl+回车键] 发送但不生成",
   "{{count}} conversations could not be recovered due to data read errors": "由于数据读取错误，{{count}} 个对话无法恢复",
