Fix/input-file-ext (#485)
* feat: add support for .doc files in office extensions and MIME types

* feat: add error handling for file parsing in InputBox and update translations

--- a/src/renderer/i18n/locales/en/translation.json
+++ b/src/renderer/i18n/locales/en/translation.json
@@ -540,6 +540,7 @@
   "Showing first {{count}} chunks": "Showing first {{count}} chunks",
   "SiliconFlow": "SiliconFlow",
   "Smartest AI-Powered Services for Rapid Access": "Smartest AI-Powered Services for Rapid Access",
+  "Some files failed to parse. Please remove them and try again.": "Some files failed to parse. Please remove them and try again.",
   "Spam or advertising": "Spam or advertising",
   "Specific model settings": "Specific model settings",
   "Spell Check": "Spell Check",
