--- a/src/renderer/i18n/locales/zh-Hans/translation.json
+++ b/src/renderer/i18n/locales/zh-Hans/translation.json
@@ -629,6 +629,7 @@
   "Showing first {{count}} chunks": "显示前 {{count}} 分块",
   "SiliconFlow": "硅基流动",
   "Smartest AI-Powered Services for Rapid Access": "最智能的 AI 服务，快速访问",
+  "Some files failed to parse. Please remove them and try again.": "部分文件解析失败，请移除后重试。",
   "Sorry, the current model {{model}} API itself does not support image understanding. If you need to send images, please switch to another model or use the recommended <OpenMorePlanButton>Chatbox AI Models</OpenMorePlanButton>.": "抱歉，当前模型 {{model}} API 本身不支持图片理解。如果您需要发送图片，请切换到其他模型或使用推荐的 <OpenMorePlanButton>Chatbox AI Models</OpenMorePlanButton>。",
   "Sorry, the current model {{model}} API itself does not support image understanding. If you need to send images, please switch to another model.": "抱歉，当前模型 {{model}} API 本身不支持图片理解。如果您需要发送图片，请切换到其他模型。",
   "Spam or advertising": "垃圾广告",
