Feat/kb using backend parsing as a fallback (only Pro user) (#489)
* feat: give user the option to use be service or not

* feat: change topic list icon

* feat: kb servr parse

--- a/src/renderer/i18n/locales/en/translation.json
+++ b/src/renderer/i18n/locales/en/translation.json
@@ -2,7 +2,10 @@
   "(Trial)": "(Trial)",
   "[Ctrl+Enter] Save, [Ctrl+Shift+Enter] Save and Resend": "[Ctrl+Enter] Save, [Ctrl+Shift+Enter] Save and Resend",
   "{{count}} conversations could not be recovered due to data read errors": "{{count}} conversations could not be recovered due to data read errors",
+  "{{count}} file(s) failed to parse locally": "{{count}} file(s) failed to parse locally",
+  "{{count}} file(s) failed to queue": "{{count}} file(s) failed to queue",
   "{{count}} file(s) not supported: {{files}}. Supported formats: {{formats}}": "{{count}} file(s) not supported: {{files}}. Supported formats: {{formats}}",
+  "{{count}} file(s) queued for server parsing": "{{count}} file(s) queued for server parsing",
   "{{count}} MCP servers imported": "{{count}} MCP servers imported",
   "A provider with this ID already exists. Continuing will overwrite the existing configuration.": "A provider with this ID already exists. Continuing will overwrite the existing configuration.",
   "About": "About",
@@ -237,6 +240,7 @@
   "Failed to open file dialog: {{error}}": "Failed to open file dialog: {{error}}",
   "Failed to parse file. Please try again or use a different file format.": "Failed to parse file. Please try again or use a different file format.",
   "Failed to read from clipboard": "Failed to read from clipboard",
+  "Failed to retry {{filename}}: {{error}}": "Failed to retry {{filename}}: {{error}}",
   "Failed to save file: {{error}}": "Failed to save file: {{error}}",
   "Failed to save login tokens": "Failed to save login tokens",
   "Failed to update knowledge base, Error: {{error}}": "Failed to update knowledge base, Error: {{error}}",
@@ -251,6 +255,7 @@
   "File Content": "File Content",
   "File Processing Error": "File Processing Error",
   "File saved to {{uri}}": "File saved to {{uri}}",
+  "File {{filename}} queued for server parsing": "File {{filename}} queued for server parsing",
   "File Search": "File Search",
   "File Size": "File Size",
   "Focus on the Input Box": "Focus on the Input Box",
@@ -489,6 +494,8 @@
   "Retrieve License": "Retrieve License",
   "Retrieves up-to-date documentation and code examples for any library.": "Retrieves up-to-date documentation and code examples for any library.",
   "Retry": "Retry",
+  "Retry All": "Retry All",
+  "Retry with Server Parsing": "Retry with Server Parsing",
   "Return to the top": "Return to the top",
   "save": "save",
   "Save": "Save",
@@ -515,6 +522,7 @@
   "Selected Key": "Selected Key",
   "Send": "Send",
   "Send Without Generating Response": "Send Without Generating Response",
+  "Server parsing will consume compute credits. Please be cautious with large files.": "Server parsing will consume compute credits. Please be cautious with large files.",
   "Session Raw JSON": "Session Raw JSON",
   "Set the maximum number of tokens for model output. Please set it within the acceptable range of the model, otherwise errors may occur.": "Set the maximum number of tokens for model output. Please set it within the acceptable range of the model, otherwise errors may occur.",
   "Settings": "Settings",
@@ -623,6 +631,8 @@
   "Upon import, changes will take effect immediately and existing data will be overwritten": "Upon import, changes will take effect immediately and existing data will be overwritten",
   "Use default (first model)": "Use default (first model)",
   "Use My Own API Key / Local Model": "Use My Own API Key / Local Model",
+  "Use server parsing": "Use server parsing",
+  "Upgrade to use server parsing": "Upgrade to use server parsing",
   "Used to extract text feature vectors, add in Settings - Provider - Model List": "Used to extract text feature vectors, add in Settings - Provider - Model List",
   "Used to get more accurate search results": "Used to get more accurate search results",
   "Used to preprocess image files, requires models with vision capabilities enabled": "Used to preprocess image files, requires models with vision capabilities enabled",
